--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "bcrypt" : "^5.1.1",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "joi": "^17.13.1",
