--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1"
   }
